--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -3,7 +3,7 @@ page-login {
     content{
         background-color: brown;
     }
-    ion-item ion-input{
+    ion-input {
         width: 100%;
         -moz-border-radius: 50px;
         -webkit-border-radius: 50px;
@@ -11,6 +11,15 @@ page-login {
         border-radius: 10px;
         margin-bottom: 1px; 
    }  
+  ion-row{
+      padding-left: 20px;
+  }
+  .error{
+      text-align: center;
+
+    background-color: rgb(231, 158, 158);
+    color: red;
+  }
 
 }
 
